syntax = "proto2";

option java_generic_services = true;
option java_package = "com.maxsam.proto";
option java_multiple_files = true;

message Ping {
  required string message = 1;
}

message Pong {
  required string message = 1;
}

message RequestInfo {
  required int32 requestId = 1;
  required bool failed = 2;
  required bool cancelled = 3;
  required string errorText = 4;
}

message ServiceMessage {
  required int32 methodIndex = 1;
  required RequestInfo status = 2;
  required bytes payload = 3;
}

service PingPongService {
  rpc SendPing(Ping) returns (Pong);
  rpc HeartBeat(stream Ping) returns (stream Pong);
}